--- a/OUBus/src/main/resources/com/dvt/oubus/FXMLManager.fxml
+++ b/OUBus/src/main/resources/com/dvt/oubus/FXMLManager.fxml
@@ -84,14 +84,14 @@
                   <HBox prefHeight="100.0" prefWidth="200.0" styleClass="hboxInput">
                      <children>
                         <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="ID TRIP" />
-                        <TextField fx:id="txtIdStrip" prefHeight="26.0" prefWidth="126.0" styleClass="txtIdStrip" />
+                        <Label fx:id="lbIdTrip" prefHeight="26.0" />
                      </children>
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" styleClass="hboxInput">
                      <children>
                         <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="ID BUS" />
                         <ComboBox fx:id="cbbIdBus" prefWidth="126.0" styleClass="cbbIdBus" />
-                        <Button mnemonicParsing="false" prefHeight="14.0" prefWidth="22.0" styleClass="buttonEdit">
+                        <Button mnemonicParsing="false" onAction="#busManagermentHandler" prefHeight="14.0" prefWidth="22.0" styleClass="buttonEdit">
                            <graphic>
                               <ImageView fitHeight="27.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" styleClass="buttonDelete">
                                  <image>
@@ -112,7 +112,7 @@
             </VBox>
             <HBox maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="200.0" styleClass="hboxButton">
                <children>
-                  <Button mnemonicParsing="false" prefWidth="100.0" styleClass="buttonAdd">
+                  <Button mnemonicParsing="false" onAction="#addTripHandler" prefWidth="100.0" styleClass="buttonAdd">
                      <graphic>
                         <ImageView fitHeight="35.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" styleClass="buttonAddConfirm">
                            <image>
